# anyimg

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  main.py  pyproject.toml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
specs/001-we-are-building/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-we-are-building/contracts/: gemini_api_contract.md
src/: __main__.py
src/cli/: main.py  parser.py
src/models/: config.py  exceptions.py  request.py  response.py  result.py
src/services/: batch_api_service.py  batch_service.py  gemini_service.py  image_service.py
src/utils/: path_utils.py
tests/contract/: conftest.py  test_gemini_api.py
tests/integration/: conftest.py  test_basic_generation.py  test_batch_custom.py  test_batch_default.py  test_batch_partial_failure.py  test_custom_output.py  test_file_collision.py  test_invalid_batch_count.py  test_invalid_format.py  test_missing_api_key.py  test_missing_input.py  test_multimodal_generation.py  test_too_many_inputs.py
tests/unit/: test_config.py  test_response.py  test_result.py
